# PY_PIXEL_ART

./: .gitignore  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml
src/pixel_factory/: __init__.py  cli.py  config.py  generator.py  metadata.py  models.py  packaging.py  pipeline.py  preview.py  spritesheet.py
tests/: __init__.py  test_generator.py  test_metadata.py  test_models.py  test_packaging.py  test_spritesheet.py
